# scorpion-v2

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
api/: config.py  correlate.py  llm_router.py  main.py  msf_client.py  orchestrator.py  schemas.py  scope.py  sow.py  tool_router.py
api/agents/: coding_agent.py
api/routes/: scan.py  tasks.py
cli/: client.py  launch.py  main.py  report.py
docker/: .env.example  docker-compose.yml
docker/msf/: start.sh
docs/: AGENTS.md  ARCHITECTURE.md  GETTING_STARTED.md  MVP.md  REVIEW.md  ROADMAP.md  SECURITY_AND_AUTHORIZATION.md  TECH_STACK.md  VISION.md
memory/: db.py  models.py  repository.py
tests/: test_analyze.py  test_correlate.py  test_report.py  test_scan.py  test_scan_tools.py  test_sow.py
tests/fixtures/vulnerable_app/: app.py
